--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="message">您好，请叫我曹先生</div>
         <div class="message quick">🔍红楼梦中有哪些美食？</div>
         <div class="message quick">🔍红楼梦中有哪些判词？</div>
-        <div class="message quick">🔍红楼梦中有哪些故事？</div>
+        <div class="message quick">🔍红楼梦中有哪些事件？</div>
         <div class="message quick">🔍大梦·红楼有哪些值得一看的亮点？</div>
         <div class="message quick">🔍大梦·红楼和其他红楼梦演出有哪些不同？</div>
         <div class="message quick">🔍你是曹雪芹吗？你是如何AI重生的？</div>
