--- a/index.html
+++ b/index.html
@@ -139,12 +139,11 @@
     <div class="chat-container">
       <div class="messages" id="chat-box">
         <div class="message">您好，请叫我曹先生</div>
-        <div class="message quick">🔍红楼梦中有哪些美食？</div>
-        <div class="message quick">🔍红楼梦中有哪些判词？</div>
-        <div class="message quick">🔍红楼梦中有哪些事件？</div>
+        <div class="message quick">🔍你是曹雪芹吗？你是如何AI重生的？</div>
         <div class="message quick">🔍大梦·红楼有哪些值得一看的亮点？</div>
         <div class="message quick">🔍大梦·红楼和其他红楼梦演出有哪些不同？</div>
-        <div class="message quick">🔍你是曹雪芹吗？你是如何AI重生的？</div>
+        <div class="message quick">🔍你笔下的宝玉出家以后，所有的故事是不是就结束了？</div>
+        <div class="message quick">🔍假如你就是宝玉，你最希望选择的是黛玉还是宝钗呢？</div>
       </div>
       <div class="input-area">
         <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
