--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         max-width: 90%;
         white-space: pre-wrap;
-        text-indent: 2em;
+        text-indent: 0;
       }
       .message.user {
         background-color: #397eff;
